--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "@types/video.js": "^7.3.58",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.475.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "video.js": "^8.23.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
