--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.8",
-    "@types/video.js": "^7.3.58",
+    "@payloadcms/db-postgres": "3.65.0",
+    "@payloadcms/email-nodemailer": "3.65.0",
+    "@payloadcms/graphql": "3.65.0",
+    "@payloadcms/next": "3.65.0",
+    "@payloadcms/payload-cloud": "3.65.0",
+    "@payloadcms/plugin-cloud-storage": "3.65.0",
+    "@payloadcms/richtext-lexical": "3.65.0",
+    "@payloadcms/storage-vercel-blob": "3.65.0",
+    "@payloadcms/ui": "3.65.0",
+    "axios": "^1.11.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "16.4.7",
     "emailjs-com": "^3.2.0",
-    "lucide-react": "^0.475.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.3.0",
-    "video.js": "^8.23.4"
+    "form-data": "^4.0.4",
+    "graphql": "^16.8.1",
+    "next": "15.4.4",
+    "payload": "3.65.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "^7.9.6",
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
